--- a/app/src/main/res/layout/activity_contacto.xml
+++ b/app/src/main/res/layout/activity_contacto.xml
@@ -13,11 +13,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
         android:fontFamily="@font/fredoka"
-        android:text="@string/Chat"
+        android:text="Contactos"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/nmensajes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/nmensajes"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:visibility="gone"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/tituloChat"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
 
 
     <androidx.recyclerview.widget.RecyclerView
